# stock-market

./: .gitignore  .gitignore#  DEPLOYMENT_GUIDE.md  netlify.toml  requirements.txt
stock-backend/: .env  create_user.py  database.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  start.sh  test_connection.py  test_login.py
stock-frontend/: .gitignoregit  README.md  package-lock.json  package.json
stock-frontend/src/: App.css  App.jsx  index.css
stock-frontend/src/components/: CandleChart.jsx  Layout.css  Layout.jsx  MiniChart.jsx  PredictionCard.css  PredictionCard.jsx  PriceChart.css  PriceChart.jsx  SearchBar.css  SearchBar.jsx  StatsCards.css  StatsCards.jsx  Tooltip.jsx
stock-frontend/src/contexts/: AuthContext.jsx
stock-frontend/src/pages/: Compare.css  Compare.jsx  Dashboard.css  Dashboard.jsx  ForgotPassword.css  ForgotPassword.jsx  Learn.css  Learn.jsx  Login.css  Login.jsx  Profile.css  Profile.jsx  ResetPassword.css  ResetPassword.jsx  Watchlist.css  Watchlist.jsx
stock-frontend/src/services/: api.js
