[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-backend"
version = "1.0.0"
description = "Stock market backend API"
dependencies = [
    "fastapi==0.68.0",
    "uvicorn[standard]==0.15.0",
    "sqlalchemy==1.4.0",
    "python-dotenv==0.19.0",
    "python-multipart==0.0.5",
    "gunicorn==20.1.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "email-validator==1.1.3",
    "psycopg2-binary==2.9.3"
]

[tool.poetry]
name = "stock-backend"
version = "1.0.0"
description = "Stock market backend API"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.68.0"
uvicorn = {extras = ["standard"], version = "0.15.0"}
sqlalchemy = "1.4.0"
python-dotenv = "0.19.0"
python-multipart = "0.0.5"
gunicorn = "20.1.0"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
email-validator = "1.1.3"
psycopg2-binary = "2.9.3"
